# my-blog

backend/: .env.example  .gitignore  docker-compose.yml  pyproject.toml
backend/api/v1/users/: users.py
backend/app/models/: __init__.py  user.py
backend/app/repositories/: user.py
backend/core/: config.py  server.py
backend/core/security/: jwt.py
backend/migrations/versions/: c096af461594_initial_models.py
frontend/: .env.example  .eslintrc.js  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/sign-in/: page.tsx
frontend/src/app/(auth)/sign-up/: page.tsx
frontend/src/app/(home)/: layout.tsx
frontend/src/app/(static_pages)/about/: page.tsx
frontend/src/app/(static_pages)/help/: page.tsx
frontend/src/app/(static_pages)/info/: layout.tsx  page.tsx
frontend/src/constants/: help_card.ts
frontend/src/constants/data/: teamsPage.ts
frontend/src/constants/images/: index.ts
frontend/src/constants/navbars/: index.ts
frontend/src/modules/about/: header.tsx
frontend/src/modules/authentication/: SignUpCard.tsx  SignUpForm.tsx
frontend/src/modules/components/: navbar.tsx
frontend/src/modules/help/: help-card.tsx  navbar.tsx  search.tsx
frontend/src/modules/home/: navbar.tsx
frontend/src/modules/info/: footer.tsx  navbar.tsx
frontend/src/modules/members/: header.tsx  hero.tsx  membership-plans.tsx  why-membership.tsx
frontend/src/modules/teams/: get-in-touch.tsx  header.tsx  hero.tsx  teams-info.tsx  teams-members.tsx
(+6 files in other folders)
